--- a/chrome/popup/popup.html
+++ b/chrome/popup/popup.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+    <button id="changeColor">afsd</button>
+    <script src="../injected/page-content.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
