--- a/chrome/popup/popup.html
+++ b/chrome/popup/popup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <html>
   <head>
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-    <button id="changeColor">afsd</button>
     <script src="../injected/page-content.js"></script>
     <script src="popup.js"></script>
   </body>
