--- a/chrome/popup/popup.html
+++ b/chrome/popup/popup.html
@@ -2,6 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <html>
   <head>
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
