--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -23,5 +23,6 @@
       </div>
     </div>
   </body>
+  <script src="../terse/constants.js"></script>
   <script src="options.js"></script>
 </html>
