Options changes, restructured constants

--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -18,8 +18,12 @@
       <h1>Terse</h1>
       <h2>DOCUMENT SUMMARIZATION</h2>
       <div class="card">
-        <span>Settings</span>
+        <span><span class="material-icons-outlined icon">settings</span>Settings</span>
         <ul id="options"></ul>
+      </div>
+      <div class="card">
+        <span><span class="material-icons-outlined icon">help_outline</span>About</span>
+        <ul id="about"></ul>
       </div>
     </div>
   </body>
