Preliminary relevance testing

--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -25,6 +25,9 @@
         <span><span class="material-icons-outlined icon">help_outline</span>About</span>
         <ul id="about"></ul>
       </div>
+      <div class="card">
+        <span><span class="material-icons-outlined icon">auto_graph</span>Sample Results</span>
+      </div>
     </div>
   </body>
   <script src="../terse/constants.js"></script>
