--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -27,9 +27,11 @@
       </div>
       <div class="card">
         <span><span class="material-icons-outlined icon">auto_graph</span>Sample Results</span>
+        <ul id="tests"></ul>
       </div>
     </div>
   </body>
+  <script src="../terse/tests.js"></script>
   <script src="../terse/constants.js"></script>
   <script src="options.js"></script>
 </html>
