--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -31,6 +31,8 @@
       </div>
     </div>
   </body>
+  <script src="../terse/language-processing.js"></script>
+  <script src="../terse/sentence-document.js"></script>
   <script src="../terse/tests.js"></script>
   <script src="../terse/constants.js"></script>
   <script src="options.js"></script>
