--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <html>
-  <head>
+<head>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="options.css">
-  </head>
-  <body>
+    <script src="../js/language-processing.js"></script>
+    <script src="../js/sentence-document.js"></script>
+    <script src="../js/tests.js"></script>
+</head>
+<body>
     <bg></bg>
     <a href="https://github.com/devinsburke/CourseProject" id="source">
-      <object>
-        <svg height="32" viewBox="0 0 16 16" version="1.1" width="32" data-view-component="true">
-          <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
-        </svg>
-      </object>
+        <object>
+            <svg height="32" viewBox="0 0 16 16" version="1.1" width="32" data-view-component="true">
+                <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+            </svg>
+        </object>
     </a>
     <div class="container">
-      <h1>Terse</h1>
-      <h2>DOCUMENT SUMMARIZATION</h2>
-      <div class="card">
-        <span><span class="material-icons-outlined icon">settings</span>Settings</span>
-        <ul id="options"></ul>
-      </div>
-      <div class="card">
-        <span><span class="material-icons-outlined icon">help_outline</span>About</span>
-        <ul id="about"></ul>
-      </div>
-      <div class="card">
-        <span><span class="material-icons-outlined icon">auto_graph</span>Sample Results</span>
-        <ul id="tests"></ul>
-      </div>
+        <h1>Terse</h1>
+        <h2>DOCUMENT SUMMARIZATION</h2>
+        <div class="card">
+            <span><span class="material-icons-outlined icon">settings</span>Settings</span>
+            <ul id="options">
+                <li>test</li>
+            </ul>
+        </div>
+        <div class="card">
+            <span><span class="material-icons-outlined icon">help_outline</span>About</span>
+            <ul id="about">
+                <li>Terse is an intelligent browsing extension that summarizes any text-based web page you visit. It will pull the most relevant/descriptive sentences from the page and display those as a bulleted summary. The number of sentences shown will vary depending on the length of the document and applicable settings above. Terse aims for efficient comprehension of a page with minimal time investment, by performing text retrieval using various algorithms and natural language processing techniques.</li>
+                <li>Algorithms and methods utilized include utilization of the vector-space model using bag-of-words representation of each sentence a page. A similarity matrix using dot-matrix is implemented as well, and cosine similarity between each sentence is measured based on the weight of overlapping words. In order to implement the benefit of IDF, Terse utilizes a stop-word collection to minimize the impact of common words.</li>
+            </ul>
+        </div>
+        <div class="card">
+            <span><span class="material-icons-outlined icon">auto_graph</span>Sample Results</span>
+            <ul id="tests"></ul>
+        </div>
     </div>
-  </body>
-  <script src="../terse/language-processing.js"></script>
-  <script src="../terse/sentence-document.js"></script>
-  <script src="../terse/tests.js"></script>
-  <script src="../terse/constants.js"></script>
-  <script src="options.js"></script>
+    <script src="options.js"></script>
+</body>
 </html>
