--- a/chrome/popup/popup.html
+++ b/chrome/popup/popup.html
@@ -4,8 +4,9 @@
   <head>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="popup.css">
+    <script src="popup.js"></script>
   </head>
   <body>
-    <script src="popup.js"></script>
+    <div class="loader"></div>
   </body>
 </html>
