--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -21,20 +21,20 @@
         <h1>Terse</h1>
         <h2>DOCUMENT SUMMARIZATION</h2>
         <div class="card">
-            <span><span class="material-icons-outlined icon">settings</span>Settings</span>
+            <span><span class="icon">settings</span>Settings</span>
             <ul id="options">
                 <li>test</li>
             </ul>
         </div>
         <div class="card">
-            <span><span class="material-icons-outlined icon">help_outline</span>About</span>
+            <span><span class="icon">help_outline</span>About</span>
             <ul id="about">
                 <li>Terse is an intelligent browsing extension that summarizes any text-based web page you visit. It will pull the most relevant/descriptive sentences from the page and display those as a bulleted summary. The number of sentences shown will vary depending on the length of the document and applicable settings above. Terse aims for efficient comprehension of a page with minimal time investment, by performing text retrieval using various algorithms and natural language processing techniques.</li>
                 <li>Algorithms and methods utilized include utilization of the vector-space model using bag-of-words representation of each sentence a page. A similarity matrix using dot-matrix is implemented as well, and cosine similarity between each sentence is measured based on the weight of overlapping words. In order to implement the benefit of IDF, Terse utilizes a stop-word collection to minimize the impact of common words.</li>
             </ul>
         </div>
         <div class="card">
-            <span><span class="material-icons-outlined icon">auto_graph</span>Sample Results</span>
+            <span><span class="icon">auto_graph</span>Sample Results</span>
             <ul id="tests"></ul>
         </div>
     </div>
