removed test word

--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -22,9 +22,7 @@
         <h2>DOCUMENT SUMMARIZATION</h2>
         <div class="card">
             <span><span class="icon">settings</span>Settings</span>
-            <ul id="options">
-                <li>test</li>
-            </ul>
+            <ul id="options"></ul>
         </div>
         <div class="card">
             <span><span class="icon">help_outline</span>About</span>
