--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -27,8 +27,7 @@
         <div class="card">
             <span><span class="icon">help_outline</span>About</span>
             <ul id="about">
-                <li>Terse is an intelligent browsing extension that summarizes any text-based web page you visit. It will pull the most relevant/descriptive sentences from the page and display those as a bulleted summary. The number of sentences shown will vary depending on the length of the document and applicable settings above. Terse aims for efficient comprehension of a page with minimal time investment, by performing text retrieval using various algorithms and natural language processing techniques.</li>
-                <li>Algorithms and methods utilized include utilization of the vector-space model using bag-of-words representation of each sentence a page. A similarity matrix using dot-matrix is implemented as well, and cosine similarity between each sentence is measured based on the weight of overlapping words. In order to implement the benefit of IDF, Terse utilizes a stop-word collection to minimize the impact of common words.</li>
+                <li>Terse is an intelligent browsing extension that summarizes web document text. It displays the most relevant sentences on the page in a bulleted summary. Terse aims for efficient comprehension with minimal time investment, by performing text retrieval using various algorithms and natural language processing techniques.</li>
             </ul>
         </div>
         <div class="card">
