renamed project to 'Tilder' to free up the use of 'terse' for future libraries

--- a/chrome/options/options.html
+++ b/chrome/options/options.html
@@ -18,7 +18,7 @@
         </object>
     </a>
     <div class="container">
-        <h1>Terse</h1>
+        <h1>Tilder</h1>
         <h2>DOCUMENT SUMMARIZATION</h2>
         <div class="card">
             <span><span class="icon">settings</span>Settings</span>
@@ -27,7 +27,7 @@
         <div class="card">
             <span><span class="icon">help_outline</span>About</span>
             <ul id="about">
-                <li>Terse is an intelligent browsing extension that summarizes web document text. It displays the most relevant sentences on the page in a bulleted summary. Terse aims for efficient comprehension with minimal time investment, by performing text retrieval using various algorithms and natural language processing techniques.</li>
+                <li>Tilder is an intelligent browsing extension that summarizes web document text. It displays the most relevant sentences on the page in a bulleted summary. Tilder aims for efficient comprehension with minimal time investment, by performing text retrieval using various algorithms and natural language processing techniques.</li>
             </ul>
         </div>
         <div class="card">
