--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,9 +4,10 @@
   <head>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="popup.css">
+    <script src="../src/viewModel.js"></script>
     <script src="popup.js"></script>
   </head>
-  <body>
+  <body class="tilder loading">
     <div class="loader"></div>
   </body>
 </html>
