--- a/options/options.html
+++ b/options/options.html
@@ -4,8 +4,8 @@
 <head>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="options.css">
-    <script src="../js/language-processing.js"></script>
-    <script src="../js/sentence-document.js"></script>
+    <script src="../src/nlp.js"></script>
+    <script src="../src/processor.js"></script>
 </head>
 <body>
     <a href="https://github.com/devinsburke/tilder" id="source">
