--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="popup.css">
-    <script src="../src/viewModel.js"></script>
+    <script src="../src/view.js"></script>
     <script src="popup.js"></script>
   </head>
   <body class="tilder loading">
