improved popup window behavior

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,5 @@
     <script src="../src/view.js"></script>
     <script src="popup.js"></script>
   </head>
-  <body class="tilder loading">
-    <div class="loader"></div>
-  </body>
+  <body class="tilder loading"></body>
 </html>
